# ryanair_api_rust

./: Cargo.toml  LICENSE  README.md  rustfmt.toml
src/: lib.rs  main.rs
src/lib/: flight_builder.rs  mod.rs
src/tests/: flight_builder.rs  mod.rs
