[package]
name = "ryanair_api"
authors = ["Ronan Keane <ronankeane269@gmail.com>"] 
version = "0.1.0"
edition = "2021"

# Specify that we have both a library and a binary
[lib]
name = "ryanair_api"
path = "src/lib/mod.rs"

[[bin]]
name = "ryanair_api_bin"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.37"
futures = "0.3.30"
reqwest = "0.11.23"
serde = { version = "1.0.195", features = ["derive"] }
serde_json = "1.0.111"
tokio = { version = "1.37.0", features = ["full"] }


